<resources>
    <string name="app_name">Psalms</string>

    <!-- splash -->
    <string name="logo">MADBRIDE</string>
    <string name="splash">새 노래 곧 우리 하나님께 올릴 찬송을 내 입에 두셨으니 많은 사람이 보고 두려워하여 여호와를 의지하리로다</string>

    <!-- 하단 탭 뷰 메뉴-->
    <string name="title_home">홈</string>
    <string name="title_dashboard">서재</string>
    <string name="title_notifications">쓰기</string>
    <string name="title_account">계정</string>

    <!-- 홈 화면 -->
    <string name="home_edit">편집</string>
    <string name="home_edit_confirm">확인</string>

    <!-- 홈-매일 묵상-->
    <string name="daily_qt_confirm">확인</string>
    <string name="daily_qt_splash">새 노래 곧 우리 하나님께 올릴 찬송을 내 입에 두셨으니 많은 사람이 보고 두려워하여 여호와를 의지하리로다</string>

    <!-- 홈-매일 결심-->
    <string name="daily_decision_confirm">확인</string>
    <string name="daily_decision_splash">매일 결심한 내용을 잊지 않도록 하자</string>


    <!-- 홈-최신 글-->

    <!-- 쓰기 화면-주제 -->
    <string name="write_add">추가</string>
    <string name="write_order">정렬</string>

    <string name="item_topic">제목</string>
    <string name="item_words">말씀</string>

    <string name="dialog_title">제목</string>
    <string name="dialog_words">말씀</string>
    <string name="dialog_background">배경</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="popup_edit">편집</string>

    <!-- 쓰기 화면-상세 -->
    <string name="article_edit">편집</string>
    <string name="article_new_article">새 글</string>
    <string name="article_title">제목</string>
    <string name="article_content">내용</string>
    <string name="article_date">날짜</string>
    <string name="article_preface">서문</string>

    <!-- 쓰기 화면-새 글-->
    <string name="new_article_cancel">취소</string>
    <string name="new_article_save">저장</string>
    <string name="new_article_temp_save">임시저장</string>
    <string name="new_article_find_words">말씀보기</string>


    <!-- 서재 메인 -->
    <string name="library_my_article">내 서재</string>
    <string name="library_subscribe">구독</string>
    <string name="library_add">더보기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
